# synth-brain

./: .gitignore  Cargo.toml
src/: cli.rs  command.rs  consts.rs  error.rs  main.rs  models.rs  operation.rs
