[package]
name = "synth-brain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.3.11"
dotenv = "0.15.0"
reqwest = "0.11.18"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
